[gd_scene load_steps=9 format=1]

[ext_resource path="res://scripts/platform.gd" type="Script" id=1]
[ext_resource path="res://art/left_pallete.png" type="Texture" id=2]
[ext_resource path="res://art/sheet.beam0.atex" type="Texture" id=3]
[ext_resource path="res://audio/laser1.wav" type="Sample" id=4]
[ext_resource path="res://audio/shield_down.wav" type="Sample" id=5]

[sub_resource type="RectangleShape2D" id=3]

custom_solver_bias = 0.0
extents = Vector2( 4.64119, 18.3903 )

[sub_resource type="Animation" id=2]

resource/name = "confused"
length = 0.25
loop = true
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:visibility/opacity")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.04, 0.08 ),
"transitions": FloatArray( 1, 1, 1 ),
"update": 0,
"values": [ 1.0, 0.5, 1.0 ]
}

[sub_resource type="SampleLibrary" id=4]

samples/laser1 = {
"db": -10.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 4 )
}
samples/shield_down = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 5 )
}

[node name="platform" type="KinematicBody2D"]

transform/pos = Vector2( 67, 183 )
input/pickable = false
shapes/0/shape = SubResource( 3 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
collision/margin = 0.08
script/script = ExtResource( 1 )
texture = "res://art/left_pallete.png"
move_up = "left_move_up"
move_down = "left_move_down"
shoot = "left_shoot"
run = "run"
flip_h = false
particle_color = Color( 0, 1, 0.93, 1 )

[node name="particles" type="Particles2D" parent="."]

config/amount = 20
config/lifetime = 0.4
config/process_mode = 1
config/local_space = false
params/direction = 0.0
params/spread = 30.0
params/linear_velocity = 20.0
params/spin_velocity = 0.0
params/orbit_velocity = 0.0
params/gravity_direction = 0.0
params/gravity_strength = 0.0
params/radial_accel = 0.0
params/tangential_accel = 0.0
params/damping = 0.0
params/initial_angle = 0.0
params/initial_size = 2.0
params/final_size = 1.0
params/hue_variation = 0.0
params/anim_speed_scale = 1.0
params/anim_initial_pos = 0.0

[node name="collision" type="CollisionShape2D" parent="."]

shape = SubResource( 3 )
trigger = false
_update_shape_index = 0

[node name="sprite" type="Sprite" parent="."]

texture = ExtResource( 2 )

[node name="gun" type="Sprite" parent="."]

visibility/visible = false
transform/pos = Vector2( 5, 0 )
transform/scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 3 )

[node name="muzzle" type="Position2D" parent="gun"]

transform/pos = Vector2( 66, 0 )
transform/scale = Vector2( 2, 2 )

[node name="grow_effect" type="Tween" parent="."]

playback/process_mode = 1
playback/active = false
playback/repeat = false
playback/speed = 1.0

[node name="bullet_container" type="Node" parent="."]

[node name="anim" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/confused = SubResource( 2 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="confuse_timer" type="Timer" parent="."]

process_mode = 1
wait_time = 5.0
one_shot = true
autostart = false

[node name="ancor" type="Position2D" parent="."]

transform/pos = Vector2( -14, 0 )

[node name="sound_effects" type="SamplePlayer" parent="."]

config/polyphony = 1
config/samples = SubResource( 4 )
default/volume_db = 0.0
default/pitch_scale = 1.0
default/pan = 0.0
default/depth = 0.0
default/height = 0.0
default/filter/type = 0
default/filter/cutoff = 5000.0
default/filter/resonance = 1.0
default/filter/gain = 1.0
default/reverb_room = 2
default/reverb_send = 0.0
default/chorus_send = 0.0

[connection signal="timeout" from="confuse_timer" to="." method="_on_confuse_timer_timeout"]


